[project]
name = "tc-warning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "streamlit>=1.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
